--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
