--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
     "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
-    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
