--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
-    "next": "13.4.4",
+    "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
