--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -22,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-stripe-checkout": "^2.6.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
