--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "@utils/*": ["./src/utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/organisms/TestingList.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/organisms/TestingList.jsx", "src/components/organisms/CheckoutForm.jsx"],
   "exclude": ["node_modules"]
 }
